# Tucil3_13523057

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1
src/: main.cpp
src/algorithms/: astar.cpp  astar.hpp  greedy.cpp  greedy.hpp  iter_deepening.cpp  iter_deepening.hpp  solver.hpp  ucs.cpp  ucs.hpp
src/board/: board.cpp  board.hpp  car.cpp  car.hpp
src/heuristics/: blocking_cars.cpp  blocking_cars.hpp  manhattan.cpp  manhattan.hpp
src/utils/: file_reader.cpp  file_reader.hpp  output_writer.cpp  output_writer.hpp
test/: bottom.txt  left.txt  top.txt
